--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -1,37 +1,64 @@
 ---
-import BaseLayout from "$lib/layouts/BaseLayout.astro";
-import About from "$lib/components/About.astro";
-import FeaturedPost from "$lib/components/FeaturedPost.astro";
-import ContactCard from "$lib/components/ContactCard.astro";
-import ArticleCard from "$lib/components/ArticleCard.astro";
+import BaseLayout from '$lib/layouts/BaseLayout.astro'
+import About from '$lib/components/About.astro'
+import FeaturedPost from '$lib/components/FeaturedPost.astro'
+import ContactCard from '$lib/components/ContactCard.astro'
+import ArticleCard from '$lib/components/ArticleCard.astro'
 
-import { getCollection } from "astro:content";
-import type { CollectionEntry } from "astro:content";
+import { getCollection } from 'astro:content'
+import type { CollectionEntry } from 'astro:content'
 
-const allFeaturedArticles: CollectionEntry<"featuredArticles">[] = (
-  await getCollection("featuredArticles")
+const allFeaturedArticles: CollectionEntry<'featuredArticles'>[] = (
+  await getCollection('featuredArticles')
 ).sort(
-  (
-    a: CollectionEntry<"featuredArticles">,
-    b: CollectionEntry<"featuredArticles">
-  ) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+  (a: CollectionEntry<'featuredArticles'>, b: CollectionEntry<'featuredArticles'>) =>
+    b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+)
 
 export async function getStaticPaths({ paginate }: any) {
-  const allArticles: CollectionEntry<"articles">[] = (
-    await getCollection("articles")
-  ).sort(
-    (a: CollectionEntry<"articles">, b: CollectionEntry<"articles">) =>
+  const allArticles: CollectionEntry<'articles'>[] = (await getCollection('articles')).sort(
+    (a: CollectionEntry<'articles'>, b: CollectionEntry<'articles'>) =>
       b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-  );
-  return paginate(allArticles, { pageSize: 12 });
+  )
+  return paginate(allArticles, { pageSize: 12 })
 }
 
-const { page }: any = Astro.props;
+const { page }: any = Astro.props
 ---
 
+<script is:inline>
+  document.querySelector('#search')?.addEventListener('input', async (e) => {
+    // only load the pagefind script once
+    if (e.target.dataset.loaded !== 'true') {
+      e.target.dataset.loaded = 'true'
+      // load the pagefind script
+      window.pagefind = await import('/pagefind/pagefind.js')
+    }
+
+    // search the index using the input value
+    const search = await window.pagefind.search(e.target.value)
+
+    // clear the old results
+    document.querySelector('#results').innerHTML = ''
+
+    // add the new results
+    for (const result of search.results) {
+      const data = await result.data()
+      document.querySelector('#results').innerHTML += `
+        <a href="${data.url}">
+          <h3>${data.meta.title}</h3>
+          <p>${data.excerpt}</p>
+        </a>`
+    }
+  })
+</script>
+
 <BaseLayout>
-  <main class="container mt-12 lg:mt-16 mb-16 md:mb-24">
+  <main class="container mb-16 mt-12 md:mb-24 lg:mt-16">
+    <input id="search" type="text" placeholder="Search..." />
+
+    <div id="results"></div>
+
     <div class="grid grid-cols-1 gap-12 lg:grid-cols-3">
       <!-- article card -->
       <section class="lg:col-span-2">
@@ -41,30 +68,22 @@ const { page }: any = Astro.props;
         <!-- /article card -->
 
         <!-- paginator -->
-        <div
-          class="flex items-center justify-between space-x-10 mx-auto mt-16 md:mt-20 lg:mt-24"
-        >
+        <div class="mx-auto mt-16 flex items-center justify-between space-x-10 md:mt-20 lg:mt-24">
           <a
             href={page.url.prev}
             class={!page.url.prev
-              ? "flex items-center gap-1 cursor-not-allowed font-medium"
-              : "flex items-center gap-1 hover:text-lightBlue transition font-medium"}
+              ? 'flex items-center gap-1 cursor-not-allowed font-medium'
+              : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              viewBox="0 0 24 24"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
               <path
                 fill="currentColor"
-                d="M20 11v2H8l5.5 5.5l-1.42 1.42L4.16 12l7.92-7.92L13.5 5.5L8 11z"
-              ></path>
+                d="M20 11v2H8l5.5 5.5l-1.42 1.42L4.16 12l7.92-7.92L13.5 5.5L8 11z"></path>
             </svg>
             Newer Posts
           </a>
 
-          <div class="hidden md:block text-zinc-800 dark:text-muted-foreground">
+          <div class="hidden text-zinc-800 dark:text-muted-foreground md:block">
             Page
             {page.currentPage}
             of
@@ -74,20 +93,14 @@ const { page }: any = Astro.props;
           <a
             href={page.url.next}
             class={!page.url.next
-              ? "flex items-center gap-1 cursor-not-allowed font-medium"
-              : "flex items-center gap-1 hover:text-lightBlue transition font-medium"}
+              ? 'flex items-center gap-1 cursor-not-allowed font-medium'
+              : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
           >
             Older Posts
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              viewBox="0 0 24 24"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
               <path
                 fill="currentColor"
-                d="M4 11v2h12l-5.5 5.5l1.42 1.42L19.84 12l-7.92-7.92L10.5 5.5L16 11z"
-              ></path>
+                d="M4 11v2h12l-5.5 5.5l1.42 1.42L19.84 12l-7.92-7.92L10.5 5.5L16 11z"></path>
             </svg>
           </a>
         </div>
@@ -95,9 +108,7 @@ const { page }: any = Astro.props;
       </section>
 
       <!-- sidebar -->
-      <aside
-        class="md:grid md:grid-cols-2 md:gap-10 lg:col-span-1 lg:grid-cols-1 h-fit"
-      >
+      <aside class="h-fit md:grid md:grid-cols-2 md:gap-10 lg:col-span-1 lg:grid-cols-1">
         <div>
           <About />
           <hr class="mt-10" />
@@ -109,9 +120,7 @@ const { page }: any = Astro.props;
               {
                 allFeaturedArticles
                   .slice(0, 5)
-                  .map((featuredArticle) => (
-                    <FeaturedPost featuredArticle={featuredArticle} />
-                  ))
+                  .map((featuredArticle) => <FeaturedPost featuredArticle={featuredArticle} />)
               }
             </div>
           </section>
@@ -126,7 +135,6 @@ const { page }: any = Astro.props;
     </div>
   </main>
 
- 
   <script>
     declare global {
       interface Window {
@@ -134,16 +142,14 @@ const { page }: any = Astro.props;
       }
     }
 
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", (user: any) => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/maintainer/";
-        });
-      }
-    });
-  }
-</script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on('init', (user: any) => {
+        if (!user) {
+          window.netlifyIdentity.on('login', () => {
+            document.location.href = '/maintainer/'
+          })
+        }
+      })
+    }
+  </script>
 </BaseLayout>
-
-
