--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,44 +1,69 @@
 ---
-import "$lib/styles/app.css";
+import '$lib/styles/app.css'
 
 // font
-import "@fontsource/inter/400.css";
-import "@fontsource/inter/500.css";
-import "@fontsource/inter/600.css";
-import "@fontsource/inter/700.css";
-import "@fontsource/inter/800.css";
+import '@fontsource/inter/400.css'
+import '@fontsource/inter/500.css'
+import '@fontsource/inter/600.css'
+import '@fontsource/inter/700.css'
+import '@fontsource/inter/800.css'
 // /font
 
-import { ViewTransitions } from "astro:transitions";
-import Header from "$lib/components/Header.svelte";
-import Footer from "$lib/components/Footer.astro";
-import LoadingIndicator from "astro-loading-indicator/component";
+import { ViewTransitions } from 'astro:transitions'
+import Header from '$lib/components/Header.svelte'
+import Footer from '$lib/components/Footer.astro'
+import LoadingIndicator from 'astro-loading-indicator/component'
 
-const { title, url } = Astro.props;
+const { title, url } = Astro.props
 ---
 
 <script is:inline>
-  const isBrowser = typeof localStorage !== 'undefined';
+  const isBrowser = typeof localStorage !== 'undefined'
   const getThemePreference = () => {
     if (isBrowser && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
+      return localStorage.getItem('theme')
     }
-    return window.matchMedia('(prefers-color-scheme: dark)').matches
-      ? 'dark' : 'light';
-  };
-  const isDark = getThemePreference() === 'dark';
-  document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
- 
+    return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
+  }
+  const isDark = getThemePreference() === 'dark'
+  document.documentElement.classList[isDark ? 'add' : 'remove']('dark')
+
   if (isBrowser) {
     const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains('dark');
-      localStorage.setItem('theme', isDark ? 'dark' : 'light');
-    });
+      const isDark = document.documentElement.classList.contains('dark')
+      localStorage.setItem('theme', isDark ? 'dark' : 'light')
+    })
     observer.observe(document.documentElement, {
       attributes: true,
       attributeFilter: ['class']
-    });
+    })
   }
+
+  // pagefind
+  document.querySelector('#search')?.addEventListener('input', async (e) => {
+    // only load the pagefind script once
+    if (e.target.dataset.loaded !== 'true') {
+      e.target.dataset.loaded = 'true'
+      // load the pagefind script
+      window.pagefind = await import('/pagefind/pagefind.js')
+    }
+
+    // search the index using the input value
+    const search = await window.pagefind.search(e.target.value)
+
+    // clear the old results
+    document.querySelector('#results').innerHTML = ''
+
+    // add the new results
+    for (const result of search.results) {
+      const data = await result.data()
+      document.querySelector('#results').innerHTML += `
+        <a href="${data.url}">
+          <h3>${data.meta.title}</h3>
+          <p>${data.excerpt}</p>
+        </a>`
+    }
+  })
 </script>
 
 <html lang="en">
@@ -60,8 +85,8 @@ const { title, url } = Astro.props;
     <meta name="og:title" content={`${title} | Techie Faisal`} />
     <meta name="og:description" content="" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Techie Faisal</title>
 
@@ -72,6 +97,12 @@ const { title, url } = Astro.props;
   </head>
   <body>
     <Header client:load />
+
+    <div class="container my-12">
+      <input id="search" type="text" placeholder="Search..." />
+      <div id="results"></div>
+    </div>
+
     <slot />
     <Footer />
   </body>
