--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -23,7 +23,7 @@ const grouppedHeadings = headings.reduce((array, heading) => {
 
 <h2 class="text-xl font-bold">Table of Contents</h2>
 <nav id="table-of-contents" aria-label="Table Of Contents" class="mt-4">
-  <ol class="grid list-inside list-disc grid-cols-1 gap-2">
+  <ol class="grid list-inside list-decimal grid-cols-1 gap-2">
     {
       grouppedHeadings.map((h) => (
         <li>
