--- a/src/pages/maintainer.astro
+++ b/src/pages/maintainer.astro
@@ -10,6 +10,7 @@
   <body>
     <!-- decap cms -->
 
+    <script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script is:inline src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
   </body>
 </html>
