Add sveltia cms

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,22 +1,15 @@
+<section class="rounded-lg bg-zinc-100 p-10 dark:bg-zinc-900">
+  <img src="/img/logo.svg" alt="" width={70} height={70} />
 
-<section class="p-10 rounded-lg bg-zinc-100 dark:bg-zinc-900">
-  <img
-        src='/img/logo.png'
-        alt=""
-        width={70}
-        height={70}
-      />  
- 
-  <p class="mt-3 font-medium lg:text-lg dark:text-zinc-300">
-    Welcome to your go-to destination for fresh perspectives. Dive deep into our
-    rich content pool curated meticulously to enlighten, entertain, and engage
-    readers across the globe.
+  <p class="mt-3 font-medium dark:text-zinc-300 lg:text-lg">
+    Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content pool
+    curated meticulously to enlighten, entertain, and engage readers across the globe.
   </p>
 
-  <div class="flex items-center gap-4 mt-6">
+  <div class="mt-6 flex items-center gap-4">
     <a href="#" target="_blank">
       <svg
-        class="text-3xl md:text-2xl transition hover:text-lightBlue"
+        class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
         width="1em"
         height="1em"
@@ -31,7 +24,7 @@
 
     <a href="#" target="_blank">
       <svg
-        class="text-3xl md:text-2xl transition hover:text-lightBlue"
+        class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
         width="1em"
         height="1em"
@@ -45,7 +38,7 @@
     </a>
     <a href="#" target="_blank">
       <svg
-        class="text-3xl md:text-2xl transition hover:text-lightBlue"
+        class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
         width="1em"
         height="1em"
@@ -59,7 +52,7 @@
     </a>
     <a href="#" target="_blank">
       <svg
-        class="text-3xl md:text-2xl transition hover:text-lightBlue"
+        class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
         width="1em"
         height="1em"
