--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,19 @@
-
-<footer class="pt-12 bg-zinc-100 dark:bg-zinc-900 xl:pt-16">
+<footer class="bg-zinc-100 pt-12 dark:bg-zinc-900 xl:pt-16">
   <div class="max-w-md lg:max-w-xl xl:max-w-full">
     <div
-      class="container flex flex-col justify-between gap-12 xl:grid xl:grid-cols-3 xl:gap-12 xl:items-center xl:place-items-end"
+      class="container flex flex-col justify-between gap-12 xl:grid xl:grid-cols-3 xl:place-items-end xl:items-center xl:gap-12"
     >
       <div>
-        <img
-          src="/img/logo.png"
-          alt=""
-          width={70}
-          height={70}
-        />  
+        <img src="/img/logo.svg" alt="" width={70} height={70} />
 
         <p class="mt-3 font-medium dark:text-zinc-300">
-          Welcome to your go-to destination for fresh perspectives. Dive deep
-          into our rich content pool curated meticulously to enlighten,
-          entertain, and engage readers across the globe.
+          Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content
+          pool curated meticulously to enlighten, entertain, and engage readers across the globe.
         </p>
       </div>
 
       <nav>
-        <ul class="space-y-2 font-medium md:flex md:space-y-0 md:space-x-8">
+        <ul class="space-y-2 font-medium md:flex md:space-x-8 md:space-y-0">
           <li>Lifestyle</li>
           <li>Travel</li>
           <li>Technology</li>
@@ -31,7 +24,7 @@
       <div class="flex items-center gap-4">
         <a href="#" target="_blank">
           <svg
-            class="text-4xl md:text-3xl transition hover:text-lightBlue"
+            class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
             width="1em"
             height="1em"
@@ -46,7 +39,7 @@
 
         <a href="#" target="_blank">
           <svg
-            class="text-4xl md:text-3xl transition hover:text-lightBlue"
+            class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
             width="1em"
             height="1em"
@@ -60,7 +53,7 @@
         </a>
         <a href="#" target="_blank">
           <svg
-            class="text-4xl md:text-3xl transition hover:text-lightBlue"
+            class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
             width="1em"
             height="1em"
@@ -74,7 +67,7 @@
         </a>
         <a href="#" target="_blank">
           <svg
-            class="text-4xl md:text-3xl transition hover:text-lightBlue"
+            class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
             width="1em"
             height="1em"
@@ -97,7 +90,7 @@
   <div class="container mt-6 xl:mt-10">
     <hr />
   </div>
-    
+
   <div class="container py-6 text-sm xl:py-8">
     &copy; {new Date().getFullYear()} - Techie Faisal. All Rights Reserved.
   </div>
