--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -56,8 +56,8 @@ const { title, url, description } = Astro.props
     <meta name="og:description" content={description} />
     <meta name="”robots”" content="noindex, nofollow" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Techie Faisal</title>
 
