--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -8,18 +8,27 @@ import ArticleCard from '$lib/components/ArticleCard.astro'
 import { getCollection } from 'astro:content'
 import type { CollectionEntry } from 'astro:content'
 
-const allFeaturedArticles: CollectionEntry<'featuredArticles'>[] = (
-  await getCollection('featuredArticles')
-).sort(
+const allFeaturedArticles: CollectionEntry<'featuredArticles'>[] = await getCollection(
+  'featuredArticles',
+  ({ data }) => {
+    return import.meta.env.PROD ? data.draft !== true : true
+  }
+)
+
+allFeaturedArticles.sort(
   (a: CollectionEntry<'featuredArticles'>, b: CollectionEntry<'featuredArticles'>) =>
     b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 )
 
 export async function getStaticPaths({ paginate }: any) {
-  const allArticles: CollectionEntry<'articles'>[] = (await getCollection('articles')).sort(
+  const allArticles: CollectionEntry<'articles'>[] = await getCollection('articles', ({ data }) => {
+    return import.meta.env.PROD ? data.draft !== true : true
+  })
+  allArticles.sort(
     (a: CollectionEntry<'articles'>, b: CollectionEntry<'articles'>) =>
       b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
   )
+
   return paginate(allArticles, { pageSize: 12 })
 }
 
