--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -7,37 +7,41 @@ import * as Breadcrumb from '$lib/components/ui/breadcrumb/index.js'
 import { getCollection, type CollectionEntry } from 'astro:content'
 
 export async function getStaticPaths({ paginate }: any) {
-	const allArticles: CollectionEntry<'articles'>[] = (await getCollection('articles')).sort(
-		(a: CollectionEntry<'articles'>, b: CollectionEntry<'articles'>) =>
-			b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-	)
-	return paginate(allArticles, { pageSize: 15 })
+  const allArticles: CollectionEntry<'articles'>[] = await getCollection('articles', ({ data }) => {
+    return import.meta.env.PROD ? data.draft !== true : true
+  })
+  allArticles.sort(
+    (a: CollectionEntry<'articles'>, b: CollectionEntry<'articles'>) =>
+      b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+  )
+
+  return paginate(allArticles, { pageSize: 15 })
 }
 
 const { page } = Astro.props
 ---
 
 <BaseLayout>
-	<main class="container mb-16 mt-8 md:mb-24">
-		<Breadcrumb.Root>
-			<Breadcrumb.List>
-				<Breadcrumb.Item>
-					<Breadcrumb.Link href="/">Home</Breadcrumb.Link>
-				</Breadcrumb.Item>
-				<Breadcrumb.Separator />
-				<Breadcrumb.Item>
-					<Breadcrumb.Page>Articles</Breadcrumb.Page>
-				</Breadcrumb.Item>
-			</Breadcrumb.List>
-		</Breadcrumb.Root>
+  <main class="container mb-16 mt-8 md:mb-24">
+    <Breadcrumb.Root>
+      <Breadcrumb.List>
+        <Breadcrumb.Item>
+          <Breadcrumb.Link href="/">Home</Breadcrumb.Link>
+        </Breadcrumb.Item>
+        <Breadcrumb.Separator />
+        <Breadcrumb.Item>
+          <Breadcrumb.Page>Articles</Breadcrumb.Page>
+        </Breadcrumb.Item>
+      </Breadcrumb.List>
+    </Breadcrumb.Root>
 
-		<h1 class="mt-8 text-4xl font-bold xl:mt-12">All Articles</h1>
-		<div class="mt-10 grid grid-cols-1 gap-10 md:grid-cols-2 md:gap-x-6 lg:grid-cols-3">
-			{(page as any).data.map((article: any) => <ArticleCard article={article} />)}
-		</div>
+    <h1 class="mt-8 text-4xl font-bold xl:mt-12">All Articles</h1>
+    <div class="mt-10 grid grid-cols-1 gap-10 md:grid-cols-2 md:gap-x-6 lg:grid-cols-3">
+      {(page as any).data.map((article: any) => <ArticleCard article={article} />)}
+    </div>
 
-		<div class="mt-16 md:mt-20 lg:mt-24">
-			<Paginator page={page} />
-		</div>
-	</main>
+    <div class="mt-16 md:mt-20 lg:mt-24">
+      <Paginator page={page} />
+    </div>
+  </main>
 </BaseLayout>
