--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -6,23 +6,10 @@ import { formatDate } from '$lib/functions.ts'
 import { Picture } from 'astro:assets'
 import About from '$lib/components/About.astro'
 import ContactCard from '$lib/components/ContactCard.astro'
-import FeaturedPost from '$lib/components/FeaturedPost.astro'
 import ArticleCard from '$lib/components/ArticleCard.astro'
 import Prose from '$lib/components/Prose.astro'
 import TOC from '$lib/components/TOC.astro'
 import * as Breadcrumb from '$lib/components/ui/breadcrumb/index.js'
-
-const allFeaturedArticles: CollectionEntry<'featuredArticles'>[] = await getCollection(
-  'featuredArticles',
-  ({ data }) => {
-    return import.meta.env.PROD ? data.draft !== true : true
-  }
-)
-
-allFeaturedArticles.sort(
-  (a: CollectionEntry<'featuredArticles'>, b: CollectionEntry<'featuredArticles'>) =>
-    b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-)
 
 export async function getStaticPaths() {
   const allArticles = await getCollection('articles')
@@ -94,6 +81,7 @@ const relatedArticles = article.data.relatedArticles
       </span>
     </div>
 
+    <!-- content -->
     <section class="grid grid-cols-1 gap-12 lg:grid-cols-3">
       <div class:list={['lg:col-span-2', { 'border-b pb-12': relatedArticles.length > 0 }]}>
         <Picture
@@ -160,23 +148,10 @@ const relatedArticles = article.data.relatedArticles
 
       <!-- sidebar -->
       <aside class="h-fit md:grid md:grid-cols-2 md:gap-10 lg:col-span-1 lg:grid-cols-1">
-        <div>
+        <section>
           <About />
-          <hr class="mt-10" />
-
-          <section class="mt-10">
-            <h2 class="text-xl font-bold">Featured Posts</h2>
-
-            <div class="mt-8 grid grid-cols-1 gap-8">
-              {
-                allFeaturedArticles
-                  .slice(0, 5)
-                  .map((featuredArticle) => <FeaturedPost featuredArticle={featuredArticle} />)
-              }
-            </div>
-          </section>
           <hr class="mt-10 md:max-lg:hidden" />
-        </div>
+        </section>
 
         <section class="mt-10 md:mt-2">
           <ContactCard />
