Add aria-label to links

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@
   </p>
 
   <div class="mt-6 flex items-center gap-4">
-    <a href="#" target="_blank">
+    <a href="#" target="_blank" aria-label="Facebook Link">
       <svg
         class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
@@ -22,7 +22,7 @@
       </svg>
     </a>
 
-    <a href="#" target="_blank">
+    <a href="#" target="_blank" aria-label="Twitter/X Link">
       <svg
         class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
@@ -36,7 +36,7 @@
         ></path>
       </svg>
     </a>
-    <a href="#" target="_blank">
+    <a href="#" target="_blank" aria-label="Instagram Link">
       <svg
         class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
@@ -50,7 +50,7 @@
         ></path>
       </svg>
     </a>
-    <a href="#" target="_blank">
+    <a href="#" target="_blank" aria-label="Reddit Link">
       <svg
         class="text-3xl transition hover:text-lightBlue md:text-2xl"
         xmlns="http://www.w3.org/2000/svg"
