--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@
       </nav>
 
       <div class="flex items-center gap-4">
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="Facebook Link">
           <svg
             class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
@@ -37,7 +37,7 @@
           </svg>
         </a>
 
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="twitter/X Link">
           <svg
             class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
@@ -51,7 +51,7 @@
             ></path>
           </svg>
         </a>
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="Instagram Link">
           <svg
             class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +65,7 @@
             ></path>
           </svg>
         </a>
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="Reddit Link">
           <svg
             class="text-4xl transition hover:text-lightBlue md:text-3xl"
             xmlns="http://www.w3.org/2000/svg"
