--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -39,6 +39,7 @@ const { page }: any = Astro.props
             class={!page.url.prev
               ? 'flex items-center gap-1 cursor-not-allowed font-medium'
               : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
+            aria-label="Go to newer posts"
           >
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
               <path
@@ -60,6 +61,7 @@ const { page }: any = Astro.props
             class={!page.url.next
               ? 'flex items-center gap-1 cursor-not-allowed font-medium'
               : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
+            aria-label="Go to older posts"
           >
             Older Posts
             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
