--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,17 +1,14 @@
 ---
-import BaseLayout from "$lib/layouts/BaseLayout.astro";
-import Button from "$lib/components/Button.astro";
+import BaseLayout from '$lib/layouts/BaseLayout.astro'
+import Button from '$lib/components/Button.astro'
 ---
 
-<BaseLayout>
-  <main
-    class="container mt-24 mb-16 lg:mt-40 xl:mt-56 xl:mb-40 md:mb-24 max-w-3xl text-center"
-  >
+<BaseLayout title="Page Not Found - Techie Faisal">
+  <main class="container mb-16 mt-24 max-w-3xl text-center md:mb-24 lg:mt-40 xl:mb-40 xl:mt-56">
     <h1 class="text-3xl font-bold md:text-5xl">Page Not Found</h1>
-    <p class="mt-6 md:text-lg dark:text-zinc-300">
-      The page you were looking for could not be found. It might have been
-      removed, renamed, or did not exist in the first place. Perhaps searching
-      can help.
+    <p class="mt-6 dark:text-zinc-300 md:text-lg">
+      The page you were looking for could not be found. It might have been removed, renamed, or did
+      not exist in the first place. Perhaps searching can help.
     </p>
 
     <div class="mt-16">
