--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -22,7 +22,11 @@ export async function getStaticPaths({ paginate }: any) {
 const { page }: any = Astro.props
 ---
 
-<BaseLayout title="Home" url="https://techiefaisal.com/">
+<BaseLayout
+  url="https://techiefaisal.com/"
+  title="Techie Faisal - Decoding Technology"
+  description=""
+>
   <main class="container mb-16 mt-12 md:mb-24 lg:mt-16">
     <div class="grid grid-cols-1 gap-12 lg:grid-cols-3">
       <!-- article card -->
