--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -1,13 +1,17 @@
 ---
-import BaseLayout from "$lib/layouts/BaseLayout.astro";
+import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
 
-<BaseLayout>
-  <main class="container mt-12 lg:mt-16 mb-16 md:mb-24 max-w-5xl h-96">
+<BaseLayout
+  title="About Us - Techie Faisal"
+  description=""
+  url="https://techiefaisal.com/about-us/"
+>
+  <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
     <h1 class="text-4xl font-extrabold">About Us</h1>
     <p class="mt-6 dark:text-zinc-300">
-      If you have any questions or suggestions about our Privacy Policy, do not
-      hesitate to contact us at [email]
+      If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
+      us at [email]
     </p>
   </main>
 </BaseLayout>
