--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,10 +1,11 @@
 ---
-const { title, link } = Astro.props;
+const { title, link } = Astro.props
 ---
 
 <a
   href={link}
-  class="bg-zinc-200 dark:bg-zinc-900 hover:bg-lightBlue dark:hover:bg-lightBlue hover:text-white transition py-3.5 px-6 font-semibold rounded-full"
+  class="rounded-full bg-zinc-200 px-6 py-3.5 font-semibold transition hover:bg-lightBlue hover:text-white dark:bg-zinc-900 dark:hover:bg-lightBlue"
+  aria-label={`Go to ${title}`}
 >
   {title}
 </a>
