--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -1,13 +1,15 @@
 ---
-import { capitalize } from "$lib/functions.ts";
-const { tags } = Astro.props;
+import { capitalize } from '$lib/functions.ts'
+const { tags } = Astro.props
 ---
 
 <div class="flex flex-wrap gap-2">
   {
     tags.map((tag: string) => (
-      <span class="text-zinc-600 bg-zinc-100 dark:bg-zinc-900 dark:text-foreground hover:bg-zinc-200 dark:hover:bg-zinc-800 transition py-1.5 px-3 rounded font-medium text-sm">
-        <a href={`/articles/category/${tag}/`}>#{capitalize(tag)}</a>
+      <span class="rounded bg-zinc-100 px-3 py-1.5 text-sm font-medium text-zinc-600 transition hover:bg-zinc-200 dark:bg-zinc-900 dark:text-foreground dark:hover:bg-zinc-800">
+        <a href={`/articles/category/${tag}/`} aria-label={`Go to ${tag}`}>
+          #{capitalize(tag)}
+        </a>
       </span>
     ))
   }
