--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -27,7 +27,11 @@ const relatedArticles = article.data.relatedArticles
   : []
 ---
 
-<BaseLayout>
+<BaseLayout
+  title={`${article.data.title} - Techie Faisal`}
+  description={article.data.description}
+  url={article.data.url}
+>
   <main class="container mb-16 mt-8 md:mb-24">
     <Breadcrumb.Root>
       <Breadcrumb.List>
