Make toc tranisition perisist on page change to make script work

--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -67,7 +67,7 @@ const grouppedHeadings = headings.reduce((array, heading) => {
   </ol>
 </nav>
 
-<script is:inline>
+<script>
   const showTOC = document.querySelector('#showTOC')
   const TOC = document.querySelector('#table-of-contents')
 
