--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -98,7 +98,7 @@ const relatedArticles = article.data.relatedArticles
         />
 
         <div class="my-8 md:my-12">
-          <TOC headings={headings} />
+          <TOC headings={headings} transition:persist />
         </div>
 
         <Prose>
