--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -1,8 +1,9 @@
 ---
+import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="Contact Us" description="" url="https://techiefaisal.com/contact-us/">
+<BaseLayout title="Contact Us" description="" url={`${SITE_URL}/contact-us/`}>
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
     <h1 class="text-4xl font-extrabold">Contact Us</h1>
     <p class="mt-6 dark:text-zinc-300">
