Remove site_url variable from astro.config.mjs

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
-import { getCollection, type CollectionEntry, getEntries } from 'astro:content'
+import { getCollection, getEntries } from 'astro:content'
 import Tag from '$lib/components/Tag.astro'
 import { formatDate } from '$lib/functions.ts'
 import { Picture } from 'astro:assets'
