--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -35,7 +35,7 @@ const grouppedHeadings = headings.reduce((array, heading) => {
   </button>
 </section>
 <nav id="table-of-contents" aria-label="Table Of Contents" class="mt-4 hidden">
-  <ol class="grid list-inside list-decimal grid-cols-1 gap-2">
+  <ol class="grid list-inside list-disc grid-cols-1 gap-2">
     {
       grouppedHeadings.map((h) => (
         <li>
