--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,9 +3,9 @@ import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="About Us - Techie Faisal" description="" url={`${SITE_URL}/about-us/`}>
+<BaseLayout title="About - Techie Faisal" description="" url={`${SITE_URL}/about/`}>
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
-    <h1 class="text-4xl font-extrabold">About Us</h1>
+    <h1 class="text-4xl font-extrabold">About</h1>
     <p class="mt-6 dark:text-zinc-300">
       If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
       us at [email]
