--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -1,20 +1,17 @@
 ---
-import Button from "$lib/components/Button.astro";
+import Button from '$lib/components/Button.astro'
 ---
 
-<div class="p-10 rounded-lg contact">
-  <h2 class="text-2xl font-bold text-white">
-    Join Us and Let's Explore Together
-  </h2>
+<div class="contact rounded-lg p-10">
+  <h2 class="text-2xl font-bold text-white">Join Us and Let's Explore Together</h2>
 
-  <p class="mt-3 font-medium text-white lg:text-lg dark:text-zinc-300">
-    Welcome to your go-to destination for fresh perspectives. Dive deep into our
-    rich content pool curated meticulously to enlighten, entertain, and engage
-    readers across the globe.
+  <p class="mt-3 font-medium text-white dark:text-zinc-300 lg:text-lg">
+    Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content pool
+    curated meticulously to enlighten, entertain, and engage readers across the globe.
   </p>
 
   <div class="mt-10">
-    <Button title="Contact Us" link="/contact-us/" />
+    <Button title="Contact" link="/contact/" />
   </div>
 </div>
 
@@ -22,6 +19,6 @@ import Button from "$lib/components/Button.astro";
   .contact {
     background:
       linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../lib/assets/img/contact_homepage.webp") no-repeat center/cover;
+      url('../lib/assets/img/contact_homepage.webp') no-repeat center/cover;
   }
 </style>
