--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,23 +1,36 @@
+---
+const navItems = [
+  { id: 1, text: 'Home', link: '/' },
+  { id: 2, text: 'Articles', link: '/articles/' },
+  { id: 3, text: 'About', link: '/about/' },
+  { id: 4, text: 'Contact', link: '/contact/' },
+  { id: 5, text: 'Privacy Policy', link: '/privacy-policy/' }
+]
+---
+
 <footer class="bg-zinc-100 pt-12 dark:bg-zinc-900 xl:pt-16">
-  <div class="max-w-md lg:max-w-xl xl:max-w-full">
+  <div>
     <div
       class="container flex flex-col justify-between gap-12 xl:grid xl:grid-cols-3 xl:place-items-end xl:items-center xl:gap-12"
     >
       <div>
         <img src="/img/logo.svg" alt="" width={70} height={70} />
 
-        <p class="mt-3 font-medium dark:text-zinc-300">
+        <p class="mt-3 max-w-md font-medium dark:text-zinc-300">
           Welcome to your go-to destination for fresh perspectives. Dive deep into our rich content
           pool curated meticulously to enlighten, entertain, and engage readers across the globe.
         </p>
       </div>
 
       <nav>
-        <ul class="space-y-2 font-medium md:flex md:space-x-8 md:space-y-0">
-          <li>Lifestyle</li>
-          <li>Travel</li>
-          <li>Technology</li>
-          <li>Trend</li>
+        <ul class="flex flex-col flex-wrap gap-2 font-medium md:flex-row md:gap-x-8 md:gap-y-4">
+          {
+            navItems.map((item) => (
+              <a href={item.link} class="transition hover:text-lightBlue">
+                <li>{item.text}</li>
+              </a>
+            ))
+          }
         </ul>
       </nav>
 
