--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -38,7 +38,7 @@ const { page }: any = Astro.props
           <a
             href={page.url.prev}
             class={!page.url.prev
-              ? 'flex items-center gap-1 cursor-not-allowed font-medium'
+              ? 'flex items-center gap-1 text-muted-foreground font-medium'
               : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
             aria-label="Go to newer posts"
           >
@@ -60,7 +60,7 @@ const { page }: any = Astro.props
           <a
             href={page.url.next}
             class={!page.url.next
-              ? 'flex items-center gap-1 cursor-not-allowed font-medium'
+              ? 'flex items-center gap-1 text-muted-foreground font-medium'
               : 'flex items-center gap-1 hover:text-lightBlue transition font-medium'}
             aria-label="Go to older posts"
           >
