--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,12 +3,12 @@ import { SITE_URL } from '$lib/const'
 import BaseLayout from '$lib/layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="Contact Us" description="" url={`${SITE_URL}/contact-us/`}>
+<BaseLayout title="Contact" description="" url={`${SITE_URL}/contact/`}>
   <main class="container mb-16 mt-12 h-96 max-w-5xl md:mb-24 lg:mt-16">
-    <h1 class="text-4xl font-extrabold">Contact Us</h1>
+    <h1 class="text-4xl font-extrabold">Contact</h1>
     <p class="mt-6 dark:text-zinc-300">
       If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
-      us at [email]
+      at [email]
     </p>
   </main>
 </BaseLayout>
