--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -12,7 +12,7 @@ import BaseLayout from '$lib/layouts/BaseLayout.astro'
     <h1 class="text-4xl font-extrabold">Privacy Policy</h1>
     <p class="mt-6 dark:text-zinc-300">
       If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact
-      us at [email]
+      at [email]
     </p>
   </main>
 </BaseLayout>
